--- a/高德地图.html
+++ b/高德地图.html
@@ -17,13 +17,13 @@
 			width: 280px;
 		}
 	</style>
-	<script type="text/javascript" src="http://webapi.amap.com/maps?v=1.3&key=您申请的key值"></script>
-	<script type="text/javascript" src="http://cache.amap.com/lbs/static/addToolbar.js"></script>
+	<script src="http://webapi.amap.com/maps?v=1.3&key=您申请的key值"></script>
+	<script src="http://cache.amap.com/lbs/static/addToolbar.js"></script>
 </head>
 <body>
 <div id="container"></div>
 <div id="panel"></div>
-<script type="text/javascript">
+<script>
 	var map = new AMap.Map("container", {
 		resizeEnable: false
 	});
