--- a/高德地图添加标记.html
+++ b/高德地图添加标记.html
@@ -18,7 +18,7 @@
 		}
 	</style>
 	<script src="http://webapi.amap.com/maps?v=1.3&key=您申请的key值"></script>
-	<script type="text/javascript" src="http://cache.amap.com/lbs/static/addToolbar.js"></script>
+	<script src="http://cache.amap.com/lbs/static/addToolbar.js"></script>
 </head>
 <body>
 <div id="container"></div>
