--- a/高德地图点击绘制点.html
+++ b/高德地图点击绘制点.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width">
 	<title>DOM事件</title>
 	<link rel="stylesheet" href="http://cache.amap.com/lbs/static/main1119.css"/>
-	<script type="text/javascript" src="http://webapi.amap.com/maps?v=1.3&key=您申请的key值"></script>
+	<script src="http://webapi.amap.com/maps?v=1.3&key=您申请的key值"></script>
 </head>
 <body>
 <div id="container"></div>
@@ -15,7 +15,7 @@
 	<input id='bt2' type="button" class="button" value="移除事件"/>
 </div>
 <div id="tip">给页面中的两个按钮绑定事件，绑定后单击地图可添加Marker</div>
-<script type="text/javascript">
+<script>
 	var clickListener, map = new AMap.Map('container', {
 		resizeEnable: true,
 		center: [116.39, 39.9]
