--- a/高德地图覆盖物事件.html
+++ b/高德地图覆盖物事件.html
@@ -6,12 +6,12 @@
 	<meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width">
 	<title>覆盖物事件</title>
 	<link rel="stylesheet" href="http://cache.amap.com/lbs/static/main1119.css"/>
-	<script type="text/javascript" src="http://webapi.amap.com/maps?v=1.3&key=您申请的key值"></script>
+	<script src="http://webapi.amap.com/maps?v=1.3&key=您申请的key值"></script>
 </head>
 <body>
 <div id="container"></div>
 <div id="tip">点击地图上的覆盖物试试</div>
-<script type="text/javascript">
+<script>
 	//初始化地图对象，加载地图
 	var map = new AMap.Map("container", {
 		resizeEnable: true
